--- a/landing-page/css/styles.css
+++ b/landing-page/css/styles.css
@@ -94,6 +94,11 @@ section {
   cursor: pointer;
 }
 
+.navbar__menu .menu__link.active {
+  background: #333;
+  color: #fff;
+}
+
 /* Header Styles */
 .page__header {
   background: #fff;
@@ -208,8 +213,8 @@ section:nth-of-type(3n + 1) .landing__container::after {
 
 /* ---- Theme State Rules ---- */
 /* Section Active Styles */
-/* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
-section.your-active-class {
+/* Note: active class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
+section.active {
   background: rgb(0, 0, 0);
   background: linear-gradient(
     0deg,
@@ -218,12 +223,12 @@ section.your-active-class {
   );
 }
 
-section.your-active-class .landing__container::before {
+section.active .landing__container::before {
   opacity: 1;
   animation: rotate 4s linear 0s infinite forwards;
 }
 
-section.your-active-class .landing__container::after {
+section.active .landing__container::after {
   opacity: 1;
   animation: rotate 5s linear 0s infinite forwards reverse;
 }
