--- a/landing-page/css/styles.css
+++ b/landing-page/css/styles.css
@@ -215,12 +215,7 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Section Active Styles */
 /* Note: active class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.active {
-  background: rgb(0, 0, 0);
-  background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 0.1) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
+  background: rgba(0, 0, 0, 0.644);
 }
 
 section.active .landing__container::before {
