--- a/landing-page/css/styles.css
+++ b/landing-page/css/styles.css
@@ -100,7 +100,7 @@ section {
 .navbar__menu ul {
   padding-left: 0;
   margin: 0;
-  text-align: right;
+  text-align: left;
 }
 
 .navbar__menu li {
